# OpenCV-Experiments

./: cvtest  cvtest.cpp  vidtest  vidtest.cpp
FileStorage/: main.cpp  storage
ReadWriteImages/: CMakeLists.txt  main.cpp
advmorph/: CMakeLists.txt  main.cpp
blurnmorph/: CMakeLists.txt  main.cpp
blurs/: CMakeLists.txt  main.cpp
blurvids/: CMakeLists.txt  main.cpp
mkimage/: CMakeLists.txt
morphops/: CMakeLists.txt  main.cpp
morphvids/: CMakeLists.txt  main.cpp
redcirclethresh/: CMakeLists.txt  main.cpp
redtracker/: CMakeLists.txt  main.cpp
slider/: CMakeLists.txt  main.cpp
thresh/: CMakeLists.txt  main.cpp
ui/: main.cpp  ui
ui0/: CMakeLists.txt  main.cpp  ui
vid/: CMakeLists.txt  main.cpp
writeimvid/: CMakeLists.txt  main.cpp
