cmake_minimum_required (VERSION 2.6)
cmake_policy(SET CMP0012 NEW)
PROJECT(advmorph)
FIND_PACKAGE(OpenCV 3.1.0 REQUIRED)
MESSAGE(“OPENCV version: ${OpenCV_Version}”)
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${OpenCV_LIB_DIR})
ADD_EXECUTABLE (advmorph main.cpp)
TARGET_LINK_LIBRARIES(advmorph ${OpenCV_LIBS})
